--- a/package.json
+++ b/package.json
@@ -8,20 +8,33 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.41",
+    "@vuelidate/validators": "^2.0.0-alpha.29",
+    "apexcharts": "^3.35.3",
+    "autoprefixer": "^10",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "firebase": "^9.8.3",
+    "jsvectormap": "^1.4.5",
+    "postcss": "^8",
+    "tailwindcss": "^3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-apexcharts": "^1.4.1",
+    "vue3-google-oauth2": "^1.0.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
